--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android:flexbox:2.0.1'
 
     implementation "androidx.room:room-runtime:2.2.6"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
