--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     implementation "org.koin:koin-android:2.2.0-rc-2"
     implementation "org.koin:koin-android-viewmodel:2.2.0-rc-2"
 
+    implementation "com.squareup.okhttp:okhttp:2.5.0"
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation 'com.beust:klaxon:5.5'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
