--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.6"
     implementation 'com.beust:klaxon:5.5'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.github.devsideal:VectorChildFinder:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
