--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.android:flexbox:2.0.1'
 
-    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-runtime:2.4.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    kapt "androidx.room:room-compiler:2.3.0"
-    implementation "androidx.room:room-ktx:2.3.0"
-    androidTestImplementation "androidx.room:room-testing:2.3.0"
+    kapt "androidx.room:room-compiler:2.4.0"
+    implementation "androidx.room:room-ktx:2.4.0"
+    androidTestImplementation "androidx.room:room-testing:2.4.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
@@ -63,6 +63,10 @@ dependencies {
 
     implementation "org.koin:koin-android:2.2.0-rc-2"
     implementation "org.koin:koin-android-viewmodel:2.2.0-rc-2"
+
+    implementation "com.squareup.retrofit2:retrofit:2.6.0"
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
 
     implementation "com.squareup.okhttp:okhttp:2.7.5"
     implementation "com.google.code.gson:gson:2.8.6"
