--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WordsLife">
         <activity
-            android:name=".data.filter.choose.source.ChooseSourceActivity"
+            android:name="com.whycody.wordslife.search.filter.choose.source.ChooseSourceActivity"
             android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
