--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android:flexbox:2.0.1'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     implementation "androidx.room:room-runtime:2.4.2"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
@@ -57,15 +57,14 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:2.4.2"
 
     def paging_version = "3.1.1"
-    implementation "androidx.paging:paging-runtime:$paging_version"
-    testImplementation "androidx.paging:paging-common:$paging_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    testImplementation "androidx.paging:paging-common-ktx:$paging_version"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
-    implementation "org.koin:koin-android:2.2.0-rc-2"
-    implementation "org.koin:koin-android-viewmodel:2.2.0-rc-2"
+    implementation "io.insert-koin:koin-android:3.2.0"
 
     implementation "com.squareup.retrofit2:retrofit:2.6.0"
     implementation "com.google.code.gson:gson:2.8.9"
