--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.whycody.lyricated">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,6 +16,7 @@
         android:theme="@style/Theme.Lyricated">
         <activity
             android:name="com.whycody.lyricated.search.filter.choose.source.ChooseSourceActivity"
+            android:windowSoftInputMode="stateHidden"
             android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -22,6 +24,7 @@
         </activity>
         <activity
             android:name="com.whycody.lyricated.main.MainActivity"
+            android:windowSoftInputMode="stateHidden"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
